--- a/Web/Views/Categoria/Edit.cshtml
+++ b/Web/Views/Categoria/Edit.cshtml
@@ -37,7 +37,12 @@
                             @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                         </div>
-
+                        <div class="form-group text-left">
+                            <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+                                @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
+                                <label class="custom-control-label" for="customSwitch3">Estado</label>
+                            </div>
+                        </div>
                         <div class="modal-footer justify-content-end">
                             <button type="submit" class="btn btn-success">Guardar</button>
                         </div>
