--- a/Web/Views/Puesto/Create.cshtml
+++ b/Web/Views/Puesto/Create.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 
-@using (Html.BeginForm("Create", "Puesto", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Save", "Puesto", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -36,6 +36,7 @@
         </div>
 
         <div class="form-group row">
+            <strong class="text-danger">*</strong>
             @Html.LabelFor(model => model.IdCategoria, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-8">
                 @Html.DropDownListFor(model => model.IdCategoria, new SelectList(ViewBag.Categoria, "Id", "Descripcion"), htmlAttributes: new { @class = "form-control" })
