--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -105,7 +105,8 @@
                                         }
                                         else
                                         {
-                                            <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>}
+                                            <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
+                                        }
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Rol.Descripcion)
