--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -29,15 +29,16 @@
     </div><!-- /.container-fluid -->
 </div>
 
-@{ if (UsuarioLogueado.Rol.Id == 1)
-    {
-        <p>
-            <a class="btn btn-primary" href="@Url.Action("Create", "Usuario")">
-                <i class="fa fa-plus"></i>
-                Nuevo Usuario
-            </a>
-        </p> 
-    } 
+@{ 
+        if (UsuarioLogueado != null && UsuarioLogueado.Rol.Id == 1)
+        {
+            <p>
+                <a class="btn btn-primary" href="@Url.Action("Create", "Usuario")">
+                    <i class="fa fa-plus"></i>
+                    Nuevo Usuario
+                </a>
+            </p>
+        }
 }
 
 
@@ -75,78 +76,78 @@
                                 @foreach (var item in Model)
                                 {
 
-                                <tr>
-                                    <td>
-                                        @if (item.Foto != null)
-                                        {
-                                            <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:auto"> }
-                                        else
-                                        {
-                                            <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
-                                        }
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Id)
-                                    </td>
+                                    <tr>
+                                        <td>
+                                            @if (item.Foto != null)
+                                            {
+                                                <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:auto"> }
+                                            else
+                                            {
+                                                <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
+                                            }
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Id)
+                                        </td>
 
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.NombreCompleto)
-                                        @if (item.Id == UsuarioLogueado.Id)
-                                        {
-                                            <span class="right badge badge-primary ml-5">Tú</span>
-                                        }
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.NombreCompleto)
+                                            @if (UsuarioLogueado !=null && item.Id == UsuarioLogueado.Id)
+                                            {
+                                                <span class="right badge badge-primary ml-5">Tú</span>
+                                            }
 
-                                    </td>
+                                        </td>
 
-                                    <td class="text-center">
-                                        @if (item.Estado)
-                                        {
-                                            <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
-                                        }
-                                        else
-                                        {
-                                            <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
-                                        }
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Rol.Descripcion)
-                                    </td>
-                                    <td class="text-center ">
-                                        <ul style="display:flex; list-style:none">
-                                            <li>
-                                                <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Usuario", new { id = item.Id })">
-                                                    <i class="fas fa-eye">
-                                                    </i>
-                                                </a>
-                                            </li>
+                                        <td class="text-center">
+                                            @if (item.Estado)
+                                            {
+                                                <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
+                                            }
+                                            else
+                                            {
+                                                <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
+                                            }
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Rol.Descripcion)
+                                        </td>
+                                        <td class="text-center ">
+                                            <ul style="display:flex; list-style:none">
+                                                <li>
+                                                    <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Usuario", new { id = item.Id })">
+                                                        <i class="fas fa-eye">
+                                                        </i>
+                                                    </a>
+                                                </li>
 
-                                            @{ if (UsuarioLogueado.Rol.Descripcion != "Integrante")
-                                                {
-                                                    <li>
-                                                        <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Usuario", new { id = item.Id })">
-                                                            <i class="fas fa-user-edit">
-                                                            </i>
-                                                        </a>
-                                                    </li>
-                                                } }
-                                            @{ if (UsuarioLogueado.Rol.Descripcion != "Integrante")
-                                                {
-
-                                                    if (item.Estado)
+                                                @{ if (UsuarioLogueado != null && UsuarioLogueado.Rol.Descripcion != "Integrante")
                                                     {
                                                         <li>
-                                                            <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
-                                                                <i class="fas fa-trash"></i>
+                                                            <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Usuario", new { id = item.Id })">
+                                                                <i class="fas fa-user-edit">
+                                                                </i>
                                                             </a>
                                                         </li>
-                                                    }
+                                                    } }
+                                                @{ if (UsuarioLogueado != null && UsuarioLogueado.Rol.Descripcion != "Integrante")
+                                                    {
+
+                                                        if (item.Estado)
+                                                        {
+                                                            <li>
+                                                                <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
+                                                                    <i class="fas fa-trash"></i>
+                                                                </a>
+                                                            </li>
+                                                        }
 
 
-                                                } }
-                                        </ul>
-                                    </td>
-                                </tr>
-}
+                                                    } }
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                }
                             </tbody>
                         </table>
 
