--- a/Web/Views/Recuperacion/Index.cshtml
+++ b/Web/Views/Recuperacion/Index.cshtml
@@ -49,7 +49,7 @@
                                 @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "disennoinputs" } })
                                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
                             </div>
-                            <div class="formDiv" style="transition-delay: 0.4s">
+                            <div class="formDiv" style="transition-delay: 0.4s; margin-top:20px">
                                 <p>CORREO</p>
                                 <!--<input type="text" />-->
                                 @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "disennoinputs" } })
