--- a/Web/Views/Puesto/Index.cshtml
+++ b/Web/Views/Puesto/Index.cshtml
@@ -73,84 +73,86 @@
                                 @foreach (var item in Model)
                                 {
 
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Descripcion)
-                                    </td>
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Descripcion)
+                                        </td>
 
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Categoria.Descripcion)
-                                    </td>
-                                    <td class="text-center">
-                                        @if (item.Estado)
-                                        {
-                                            <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
-                                        }
-                                        else
-                                        {
-                                            <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
-                                        }
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Categoria.Descripcion)
+                                        </td>
+                                        <td class="text-center">
+                                            @if (item.Estado)
+                                            {
+                                                <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
+                                            }
+                                            else
+                                            {
+                                                <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
+                                            }
 
-                                    </td>
-                                    <td class="text-center ">
-                                        <ul style="display:flex; list-style:none">
-                                            <li>
-                                                <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Puesto", new { id = item.Id })">
-                                                    <i class="fas fa-eye">
-                                                    </i>
-                                                </a>
-                                            </li>
-                                            @{ if (UsuarioLogueado.Rol.Descripcion != "Integrante")
-                                                                {
+                                        </td>
+                                        <td class="text-center ">
+                                            <ul style="display:flex; list-style:none">
                                                 <li>
-                                                    <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Puesto", new { id = item.Id })">
-                                                        <i class="fas fa-pencil-alt">
+                                                    <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Puesto", new { id = item.Id })">
+                                                        <i class="fas fa-eye">
                                                         </i>
                                                     </a>
-                                                </li> } }
+                                                </li>
+                                                @{ if (UsuarioLogueado.Rol.Descripcion != "Integrante")
+                                                    {
+                                                        <li>
+                                                            <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Puesto", new { id = item.Id })">
+                                                                <i class="fas fa-pencil-alt">
+                                                                </i>
+                                                            </a>
+                                                        </li>
+ } }
 
-                                            @{ if (UsuarioLogueado.Rol.Descripcion != "Integrante")
-                                                                {
-                                                <li>
-                                                    <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
-                                                        <i class="fas fa-trash">
-                                                        </i>
-                                                    </a>
-                                                </li> } }
-                                        </ul>
-                                    </td>
-                                </tr>
-                                                }
-                                            </tbody>
-                                        </table>
+                                                @{ if (UsuarioLogueado.Rol.Descripcion != "Integrante")
+                                                    {
+                                                        <li>
+                                                            <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
+                                                                <i class="fas fa-ban">
+                                                                </i>
+                                                            </a>
+                                                        </li>
+ } }
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
 
 
 
-                                        <input type="hidden" id="campoOculto" />
+                        <input type="hidden" id="campoOculto" />
 
 
 
-                                    </div>
-                                    <!-- /.card-body -->
-                                </div>
-                                <!-- /.card -->
-                            </div>
-                            <!-- /.col -->
-                        </div>
-                        <!-- /.row -->
                     </div>
-                    <!-- /.container-fluid -->
-                </section>
-                <!-- /.content -->
+                    <!-- /.card-body -->
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.col -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
+</section>
+<!-- /.content -->
 
-                <input type="hidden" id="campoOculto" />
+<input type="hidden" id="campoOculto" />
 
 
-                @section scripts {
-                    @Scripts.Render("~/bundles/datatable")
-                    <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
+@section scripts {
+    @Scripts.Render("~/bundles/datatable")
+    <script src="~/Content/plugins/sweetalert2/sweetalert2.min.js"></script>
 
-                    <script>
+    <script>
     // Habilita los tooltips
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
@@ -160,27 +162,27 @@
 
         // Recibe los parámetros del Controller
                 var option = '@TempData["Action"]'
-                var message = '@TempData["MessageError"]'
+                var message = '@TempData["Message"]'
 
 
 
                 if (option == 'S') {
                     Swal.fire('Éxito!',
-                        'El puesto fue creado correctamente.',
+                        'El registro fue creado correctamente.',
                         'success');
                 }
 
 
                  if (option == 'D') {
                      Swal.fire('Éxito!',
-                         'El puesto fue borrado correctamente.',
+                         'El registro fue borrado correctamente.',
                          'success');
                 }
 
 
                  if (option == 'U') {
                      Swal.fire('Éxito!',
-                         'El puesto fue actualizado correctamente.',
+                         'El registro fue actualizado correctamente.',
                          'success');
                 }
 
@@ -191,118 +193,118 @@
             }
 
     });
-                    </script>
+    </script>
 
-                    <script>
-                        $(function () {
-                            $("#example1").DataTable({
-                                "language": {
-                                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-                                },
-                                dom: 'Bfrtip',
-                                //poner clase notexport a la columnas que no queremos en las exportaciones
-                                buttons: [
-                                    {
-                                        extend: 'copy',
-                                        text: 'Copiar',
-                                        className: 'btn btn-default',
-                                        exportOptions: {
-                                            columns: ':not(.notexport)'
-                                        }
-                                    },
-                                    {
-                                        extend: 'csv',
-                                        text: 'CSV',
-                                        className: 'btn btn-default',
-                                        exportOptions: {
-                                            columns: ':not(.notexport)'
-                                        }
-                                    },
-                                    {
-                                        extend: 'excel',
-                                        text: 'Excel',
-                                        className: 'btn btn-default',
-                                        exportOptions: {
-                                            columns: ':not(.notexport)'
-                                        }
-                                    },
-                                    {
-                                        extend: 'pdf',
-                                        text: 'PDF',
-                                        className: 'btn btn-default',
-                                        exportOptions: {
-                                            columns: ':not(.notexport)'
-                                        }
-                                    },
-                                    {
-                                        extend: 'print',
-                                        text: 'Imprimir',
-                                        className: 'btn btn-default',
-                                        exportOptions: {
-                                            columns: ':not(.notexport)'
-                                        }
-                                    }
-
-                                ],
-
-                                "responsive": true, "lengthChange": false, "autoWidth": false,
-
-
-                            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-
-                        });
-                    </script>
-
-                    <script>
-
-                        //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
-                        $(document).ready(function () {
-                            $("#menupuestos").addClass('active');
-                            $("#mantenimientos").addClass('active');
-                        });
-
-                    </script>
-
-                    <script>
-                        function eliminar(id) {
-                            Swal.fire({
-                                title: 'Estás seguro?',
-                                text: "No podrás revertirlo!",
-                                icon: 'warning',
-                                showCancelButton: true,
-                                confirmButtonColor: '#3085d6',
-                                cancelButtonColor: '#d33',
-                                confirmButtonText: 'Sí, bórralo!',
-                                cancelButtonText: 'Cancelar'
-                            }).then((result) => {
-                                if (result.isConfirmed) {
-                                    $.ajax({
-                                        type: "POST",
-                                        url: '/Puesto/Delete',
-                                        data: { 'id': id },
-                                        success: function (data) {
-
-                                            location.reload();
-                                        },
-                                        error: function (xhr, status, error) {
-                                            location.reload();
-                                        }
-                                    })
-
-
-                                }
-                            })
+    <script>
+        $(function () {
+            $("#example1").DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+                },
+                dom: 'Bfrtip',
+                //poner clase notexport a la columnas que no queremos en las exportaciones
+                buttons: [
+                    {
+                        extend: 'copy',
+                        text: 'Copiar',
+                        className: 'btn btn-default',
+                        exportOptions: {
+                            columns: ':not(.notexport)'
                         }
-
-                    </script>
-
-                    <script>
-                        function desactivarBotonEliminar() {
-                            document.getElementById("botonEliminar").setAttribute("disabled", "false");
+                    },
+                    {
+                        extend: 'csv',
+                        text: 'CSV',
+                        className: 'btn btn-default',
+                        exportOptions: {
+                            columns: ':not(.notexport)'
                         }
-
-                        function activarBotonEliminar() {
-                            document.getElementById("botonEliminar").setAttribute("disabled", "true");
+                    },
+                    {
+                        extend: 'excel',
+                        text: 'Excel',
+                        className: 'btn btn-default',
+                        exportOptions: {
+                            columns: ':not(.notexport)'
                         }
-                    </script>
+                    },
+                    {
+                        extend: 'pdf',
+                        text: 'PDF',
+                        className: 'btn btn-default',
+                        exportOptions: {
+                            columns: ':not(.notexport)'
+                        }
+                    },
+                    {
+                        extend: 'print',
+                        text: 'Imprimir',
+                        className: 'btn btn-default',
+                        exportOptions: {
+                            columns: ':not(.notexport)'
+                        }
+                    }
+
+                ],
+
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+
+
+            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+
+        });
+    </script>
+
+    <script>
+
+        //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
+        $(document).ready(function () {
+            $("#menupuestos").addClass('active');
+            $("#mantenimientos").addClass('active');
+        });
+
+    </script>
+
+    <script>
+        function eliminar(id) {
+            Swal.fire({
+                title: 'Estás seguro?',
+                text: "Se desactivará este puesto.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, desactívalo!',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        type: "POST",
+                        url: '/Puesto/Delete',
+                        data: { 'id': id },
+                        success: function (data) {
+
+                            location.reload();
+                        },
+                        error: function (xhr, status, error) {
+                            location.reload();
+                        }
+                    })
+
+
                 }
+            })
+        }
+
+    </script>
+
+    <script>
+        function desactivarBotonEliminar() {
+            document.getElementById("botonEliminar").setAttribute("disabled", "false");
+        }
+
+        function activarBotonEliminar() {
+            document.getElementById("botonEliminar").setAttribute("disabled", "true");
+        }
+    </script>
+}
