--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -71,7 +71,7 @@
 
                 <!-- Menu Footer-->
                 <li class="user-footer">
-                    <a href="#" class="btn btn-default btn-flat">Perfil</a>
+                    <a href="@Url.Action("Perfil","Usuario")" class="btn btn-default btn-flat">Perfil</a>
                     <a href="@Url.Action("Logout","Login")" class="btn btn-default btn-flat float-right">Salir</a>
                 </li>
             </ul>
