--- a/Web/Views/Usuario/Create.cshtml
+++ b/Web/Views/Usuario/Create.cshtml
@@ -29,6 +29,7 @@
     </div>
     <div class="card-body p-3 col-md-12">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Clave, new { Value = "P@ssw0rd*" })
         <div class="col-md-12 row">
             <div class="col-md-6">
                 <div class="form-group">
